<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edt_total_km"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_distancia"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_total_km"
        android:layout_gravity="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_preco_litro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_preco_combustivel_por_litro"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_preco_combustivel_por_litro"
        android:layout_gravity="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_autonomia"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_quantos_litros_veiculo_faz"
        android:layout_gravity="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_seu_gasto_total_sera_de"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_gasto_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$0.00"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calcular_gasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calcular"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_margin="20dp" />

</LinearLayout>